--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,11 @@ header {
 	margin: 0 0 14px 0;
 }
 
+.user-info{
+	float: right;
+	margin-right: 10px;
+}
+
 p {
 	margin: 8px 0 0 0;
 }
@@ -126,8 +131,6 @@ img {
 	border: 0;
 	font-size: 14px;
 	border-radius: 3px;
-	padding: 10px 5px;
-	width: 100px;
 	font-weight: 500;
 }
 
@@ -200,4 +203,14 @@ span {
 	color: #FFFFFF;
 	display: inline;
 	margin: 0;
+}
+
+/***All books and my books button styling***/
+
+.book-buttons{
+	margin-top: 50px;
+}
+
+.col-sm-12{
+	text-align: center;
 }
