--- a/public/css/main.css
+++ b/public/css/main.css
@@ -235,7 +235,11 @@ span {
 
 footer a{
 	position: absolute;
-	bottom: 0px;
+    left: 0;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    overflow:hidden;
 	color: silver;
 	font-size: 20px;
 }
