--- a/public/css/main.css
+++ b/public/css/main.css
@@ -233,13 +233,16 @@ span {
 	right: 50px;
 }
 
-footer a{
+footer {
 	position: absolute;
     left: 0;
     bottom: 0;
     height: 100px;
     width: 100%;
-    overflow:hidden;
+    overflow:hidden;	
+}
+
+footer a{
 	color: silver;
 	font-size: 20px;
 }
