--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,11 @@
 
 /****** Main Styling ******/
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
